# video-streaming-mig

./: .gitignore  pyproject.toml
scripts/: apt-get.sh  use_jupyter_notebook_in_poetry.sh
src/: config.py  downLoader.py  down_loader.py  register_video.py  rules.py  run_ddl.py  save_thumbnail.py
src/db/: database.py
src/model/: BaseModel.py  Comment.py  Users.py  Video.py  __init__.py
src/selenium/: utils.py
src/transaction/: decorator.py
