[project]
name = "video-streaming-mig"
version = "0.1.0"
description = ""
authors = [
    {name = "iksadnorth",email = "iksadnorth@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp (>=3.11.11,<4.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "python-jose[cryptography] (>=3.3.0,<4.0.0)",
    "yt-dlp (>=2025.2.19,<2026.0.0)",
    "selenium (>=4.29.0,<5.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
]

[tool.poetry]
packages = [{include = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
